@@ -1,5 +1,5 @@
 /*
- * $Id: adsfunc.c,v 1.36 2004/04/15 08:17:11 brianhays Exp $
+ * $Id: adsfunc.c,v 1.37 2004/04/28 09:59:37 brianhays Exp $
  */
 
 /*
@@ -568,8 +568,13 @@ HB_FUNC( ADSKEYCOUNT )
    /* 2nd parameter: unsupported Bag Name. */
    PHB_ITEM   pFilterOption = hb_param( 3, HB_IT_NUMERIC );
 
+   if ( HB_IS_NIL( pxOrder ) )
+   {
+      pxOrder = NULL;                   // simplifies arg checks below
+   }
+
    /* if arg 1 or 3 is bad, toss error */
-   if ( ( pxOrder != NULL && !HB_IS_STRING( pxOrder ) && !HB_IS_NUMBER( pxOrder ) && !HB_IS_NIL( pxOrder )  ) ||
+   if ( ( pxOrder != NULL && !HB_IS_STRING( pxOrder ) && !HB_IS_NUMBER( pxOrder )  ) ||
         ( pFilterOption != NULL && !HB_IS_NUMBER( pFilterOption ) ) )
    {
       hb_errRT_DBCMD( EG_ARG, 1014, NULL, "ADSKEYCOUNT" );
@@ -579,11 +584,10 @@ HB_FUNC( ADSKEYCOUNT )
    pArea = (ADSAREAP) hb_rddGetCurrentWorkAreaPointer();
    if( pArea )
    {
-      if( pFilterOption )
+      if( pFilterOption != NULL )
       {
          usFilterOption = hb_itemGetNI( pFilterOption );
       }
-
       /* get an Index Handle */
       if( pxOrder == NULL )             /* didn't pass it in; use current */
       {
@@ -597,7 +601,7 @@ HB_FUNC( ADSKEYCOUNT )
             AdsGetIndexHandleByOrder( pArea->hTable, ordNum, &hIndex );
          }
       }
-      else         /* must be number or nil since checked above */
+      else         /* must be String since checked above */
       {
          if( pxOrder->item.asString.length == 0 )          /* passed "" */
          {
